--- a/package.json
+++ b/package.json
@@ -40,5 +40,11 @@
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.3"
+  },
+  "dependencies": {
+    "@tailwindcss/forms": "^0.5.9",
+    "axios": "^1.7.8",
+    "dotenv": "^16.4.5",
+    "svelte-navigator": "^3.2.2"
   }
 }
