--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.8",
-    "dotenv": "^16.4.5",
-    "svelte-navigator": "^3.2.2"
+    "dotenv": "^16.4.5"
   }
 }
