--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vite": "^5.0.3"
   },
   "dependencies": {
+    "@sveltejs/adapter-vercel": "^5.5.0",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.8",
     "dotenv": "^16.4.5"
